very crude temporary fix for making the page content not hide behind the header - to be refined after further testing on more devices

--- a/js/css/custom.css
+++ b/js/css/custom.css
@@ -264,6 +264,11 @@ html {
     font-size: 10px;
 }
 
+
+#main-grid {
+    margin-top: 40px;
+}
+
 .superscript {
 	font-size: 80%;
 	position: relative;
